# manjaro-settings-manager

./: .gitignore  AUTHORS  CMakeLists.txt  DEPENDS  PKGBUILD  README  README.md  create_qm  create_ts  manjaro-settings-manager.kdev4
src/libmsm/: ActionDialog.cpp  ActionDialog.h  ApplyDialog.cpp  ApplyDialog.h  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  Job.cpp  Job.h  Kernel.cpp  Kernel.h  KernelModel.cpp  KernelModel.h  LanguageCommon.cpp  LanguageCommon.h  LanguagePackages.cpp  LanguagePackages.h  LanguagePackagesCommon.cpp  LanguagePackagesCommon.h  LanguagePackagesItem.cpp  LanguagePackagesItem.h  NotifierSettingsDialog.cpp  NotifierSettingsDialog.h  PageWidget.cpp  PageWidget.h  language_packages.json  translations.qrc
src/libmsm/translations/: msm_ar.ts  msm_ast.ts  msm_az_AZ.ts  msm_bg_BG.ts  msm_ca.ts  msm_cs_CZ.ts  msm_cy.ts  msm_da.ts  msm_de.ts  msm_el.ts  msm_en.ts  msm_es.ts  msm_es_419.ts  msm_es_AR.ts  msm_et.ts  msm_fa.ts  msm_fa_IR.ts  msm_fi.ts  msm_fo.ts  msm_fr.ts  msm_gl_ES.ts  msm_he.ts  msm_hi.ts  msm_hr.ts  msm_hu.ts  msm_id_ID.ts  msm_is.ts  msm_it.ts  msm_ja.ts  msm_ka.ts  msm_lt.ts  msm_ml.ts  msm_ms.ts  msm_nb.ts  msm_nl.ts  msm_pl.ts  msm_pt_BR.ts  msm_pt_PT.ts  msm_ro.ts  msm_ru.ts  (+14 more)
src/modules/kernel/: CMakeLists.txt  Kernel.cpp  Kernel.h  KernelAuthHelper.cpp  KernelAuthHelper.h  KernelCommon.cpp  KernelCommon.h  KernelInfoDialog.cpp  KernelInfoDialog.h  KernelListViewDelegate.cpp  KernelListViewDelegate.h  KernelModel.cpp  KernelModel.h  KernelModule.cpp  KernelModule.h  KernelPage.cpp  KernelPage.h  PageKernel.cpp  PageKernel.h  applydialog.cpp  kernel.qrc  msm_kernel.actions  msm_kernel.desktop
src/modules/keyboard/: CMakeLists.txt  KeyboardAuthHelper.cpp  KeyboardAuthHelper.h  KeyboardItem.cpp  KeyboardItem.h  KeyboardModel.cpp  KeyboardModel.h  KeyboardModule.cpp  KeyboardModule.h  KeyboardPage.cpp  KeyboardPage.h  KeyboardPreview.cpp  PageKeyboard.cpp  PageKeyboard.h  SetKeyboardLayoutJob.cpp  msm_keyboard.actions  msm_keyboard.desktop
src/modules/language_packages/: CMakeLists.txt  LanguagePackagesAuthHelper.cpp  LanguagePackagesAuthHelper.h  LanguagePackagesCommon.cpp  LanguagePackagesCommon.h  LanguagePackagesItem.cpp  LanguagePackagesItem.h  LanguagePackagesModule.cpp  LanguagePackagesModule.h  LanguagePackagesPage.cpp  LanguagePackagesPage.h  PageLanguagePackages.cpp  PageLanguagePackages.h  applydialog.h  global.cpp  global.h  language_packages.json  msm_language_packages.actions  msm_language_packages.desktop
src/modules/locale/: CMakeLists.txt  EnabledLocalesModel.cpp  EnabledLocalesModel.h  LanguageListViewDelegate.cpp  LanguageListViewDelegate.h  LocaleAuthHelper.cpp  LocaleAuthHelper.h  LocaleModule.cpp  LocaleModule.h  LocalePage.cpp  PageLanguage.cpp  PageLanguage.h  SelectLocalesDialog.cpp  SelectLocalesDialog.h  SupportedLocalesItem.cpp  SupportedLocalesItem.h  SupportedLocalesModel.cpp  SupportedLocalesModel.h  applydialog.cpp  global.cpp  msm_locale.actions  msm_locale.desktop
src/modules/mhwd/: CMakeLists.txt  MhwdAuthHelper.cpp  MhwdAuthHelper.h  MhwdCommon.cpp  MhwdCommon.h  MhwdModule.cpp  MhwdModule.h  MhwdPage.cpp  PageMhwd.cpp  PageMhwd.h  msm_mhwd.actions  msm_mhwd.desktop
src/modules/notifications/: CMakeLists.txt  NotificationsModule.cpp  NotificationsModule.h  PageNotifications.cpp  PageNotifications.h  msm_notifications.desktop
src/modules/timedate/: CMakeLists.txt  PageTimeDate.cpp  PageTimeDate.h  TimeDate.cpp  TimeDate.h  TimeDateCommon.cpp  TimeDateKcm.cpp  TimeDateKcm.h  TimeDateModule.cpp  TimeDateModule.h  TimeDatePage.cpp  TimeDatePage.h  TimeDateService.cpp  TimeZoneDialog.cpp  TimeZoneDialog.h  TimeZoneWidget.cpp  TimeZoneWidget.h  msm_timedate.desktop  timedate.qrc
src/modules/users/: AccountTypeDialog.cpp  AccountTypeDialog.h  AddUserDialog.cpp  AddUserDialog.h  CMakeLists.txt  ChangePasswordDialog.cpp  ChangePasswordDialog.h  FlatButton.cpp  FlatButton.h  ListWidget.cpp  ListWidget.h  PageUsers.cpp  PageUsers.h  PreviewFileDialog.cpp  PreviewFileDialog.h  UsersAuthHelper.cpp  UsersAuthHelper.h  UsersCommon.cpp  UsersCommon.h  UsersModule.cpp  UsersModule.h  UsersPage.cpp  accounttypedialog.cpp  adduserdialog.cpp  changepassworddialog.cpp  changepassworddialog.h  global.cpp  global.h  msm_users.actions  msm_users.desktop  previewfiledialog.h
src/msm/: CMakeLists.txt  IconThemeImageProvider.cpp  IconThemeImageProvider.h  ModuleView.cpp  ModuleView.h  MsmApplication.cpp  MsmApplication.h  MsmWindow.cpp  MsmWindow.h  MsmWindow.ui  main.cpp  manjaro-settings-manager  manjaro-settings-manager-gtk.desktop  manjaro-settings-manager.desktop  msm.desktop  msm.qrc  org.manjaro.pkexec.manjaro-settings-manager-gui.policy
src/msm/delegates/: KernelListViewDelegate.cpp  KernelListViewDelegate.h  LanguageListViewDelegate.cpp  LanguageListViewDelegate.h
src/msm/dialogs/: AccountTypeDialog.cpp  AccountTypeDialog.h  AccountTypeDialog.ui  AddUserDialog.cpp  AddUserDialog.h  AddUserDialog.ui  ApplyDialog.cpp  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ChangePasswordDialog.ui  KernelInfoDialog.cpp  PreviewFileDialog.cpp  PreviewFileDialog.h  SelectLocalesDialog.cpp  SelectLocalesDialog.h  TimeZoneDialog.cpp  TimeZoneDialog.h
src/msm/global/: Const.h  Global.cpp  Global.h
src/msm/models/: EnabledLocalesModel.cpp  EnabledLocalesModel.h  Kernel.cpp  Kernel.h  KernelModel.cpp  KernelModel.h  KeyboardItem.cpp  KeyboardItem.h  KeyboardModel.cpp  KeyboardModel.h  SupportedLocalesItem.cpp  SupportedLocalesItem.h  SupportedLocalesModel.cpp  SupportedLocalesModel.h  TimeDate.cpp  TimeDate.h
src/msm/pages/: PageKernel.cpp  PageKernel.h  PageKernel.ui  PageKeyboard.cpp  PageKeyboard.h  PageKeyboard.ui  PageLanguage.cpp  PageLanguage.h  PageLanguagePackages.cpp  PageLanguagePackages.h  PageMhwd.cpp  PageMhwd.h  PageNotifications.cpp  PageNotifications.h  PageTimeDate.cpp  PageTimeDate.h  PageUsers.cpp  PageUsers.h  PageUsers.ui  (+1 more)
src/notifier/: CMakeLists.txt  Notifier.cpp  Notifier.h  NotifierApp.cpp  NotifierApp.h  global.cpp  global.h  main.cpp  msm_notifier.desktop  notifier.qrc
(+338 files in other folders)
